Init server express mongoose

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "App.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Xiirf/S2_Acme_Explorer/issues"
   },
-  "homepage": "https://github.com/Xiirf/S2_Acme_Explorer#readme"
+  "homepage": "https://github.com/Xiirf/S2_Acme_Explorer#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.8.11"
+  }
 }
