--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/Xiirf/S2_Acme_Explorer#readme",
   "dependencies": {
     "bcrypt": "^3.0.8",
+    "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.11",
+    "nanoid": "^2.1.11",
     "newman": "^4.5.7",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3"
