--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
   },
   "homepage": "https://github.com/Xiirf/S2_Acme_Explorer#readme",
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "bcrypt": "^3.0.8",
     "cors": "^2.8.5",
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "mongoose": "^5.8.11",
     "nanoid": "^2.1.11",
     "newman": "^4.5.7",
+    "stream-to-mongo-db": "^1.6.0",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3"
   }
