--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "mocker-data-generator": "^2.6.6",
     "mongoose": "^5.8.11",
     "nanoid": "^2.1.11",
     "newman": "^4.5.7",
