--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "App.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "genData": "node ./data/generator.js"
   },
   "repository": {
     "type": "git",
