--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "JSONStream": "^1.3.5",
     "bcrypt": "^3.0.8",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
