--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^8.9.2",
     "fs": "0.0.1-security",
     "mocker-data-generator": "^2.6.6",
     "mongoose": "^5.8.11",
