--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "firebase-admin": "^8.9.2",
+    "firebase-admin": "8.8.0",
     "fs": "0.0.1-security",
     "https": "^1.0.0",
     "mocker-data-generator": "^2.6.6",
