--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "App.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "genData": "node ./data/generator.js"
   },
   "repository": {
@@ -39,5 +39,10 @@
     "strict-mode": "^1.1.4",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^7.1.0"
   }
 }
