Add tests actor, sponsorship and global vars

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "App.js",
   "scripts": {
     "start": "node app.js",
-    "test": "mocha",
+    "test": "mocha --exit",
     "genData": "node ./data/generator.js"
   },
   "repository": {
