--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "JSONStream": "^1.3.5",
     "bcrypt": "^3.0.8",
+    "cacheman": "^2.2.1",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "dateformat": "^3.0.3",
